feat(api): US-904 optimize paginated loan queries using postgres window function
- Refactor application pagination layer contracts into explicit Input and Output DTO boundaries
- Implement high-performance PostgreSQL COUNT(*) OVER() window function mechanics inside the JDBC repository
- Eliminate redundant database roundtrips by fetching data slices and total elements in a single query flight
- Secure backward compatibility support for unpaginated CLI iterations via defensive null argument processing
- Clean up LoanController listing handlers to delegate data slicing responsibilities to application use cases