@@ -4,6 +4,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.libraryexpress.domain.UnitTest;
+import org.libraryexpress.domain.core.repository.QueryResult;
 import org.libraryexpress.domain.loan.entity.Loan;
 import org.libraryexpress.domain.loan.enums.LoanStatus;
 import org.libraryexpress.domain.loan.exception.LoanLimitReachedException;
@@ -39,14 +40,14 @@ class LoanEligibilityValidatorTest {
     @DisplayName("Should validate successfully when the customer has no active or overdue loans")
     void shouldValidateSuccessfully_whenCustomerHasNoLoans() {
         // Arrange
-        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE)))
-                .thenReturn(Collections.emptySet());
+        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE), null))
+                .thenReturn(new QueryResult<>(Collections.emptySet(), 0));
 
         // Act & Assert
         // assertDoesNotThrow ensures the flow runs cleanly without triggering business exceptions
         assertDoesNotThrow(() -> validator.validate(CUSTOMER_ID));
         verify(loanRepository, times(1))
-                .search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE));
+                .search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE), null);
     }
 
     @Test
@@ -61,8 +62,8 @@ class LoanEligibilityValidatorTest {
                 .setStartDate(LocalDate.now().minusDays(20))
                 .build();
 
-        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE)))
-                .thenReturn(Set.of(overdueLoan));
+        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE), null))
+                .thenReturn(new QueryResult<>(Set.of(overdueLoan), 1));
 
         // Act & Assert
         OverdueLoanException exception = assertThrows(OverdueLoanException.class, () ->
@@ -92,8 +93,8 @@ class LoanEligibilityValidatorTest {
                 .setStartDate(LocalDate.now())
                 .build();
 
-        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE)))
-                .thenReturn(Set.of(activeLoan1, activeLoan2));
+        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE), null))
+                .thenReturn(new QueryResult<>(Set.of(activeLoan1, activeLoan2), 1));
 
         // Act & Assert
         LoanLimitReachedException exception = assertThrows(LoanLimitReachedException.class, () ->
@@ -115,8 +116,8 @@ class LoanEligibilityValidatorTest {
                 .setStartDate(LocalDate.now())
                 .build();
 
-        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE)))
-                .thenReturn(Set.of(activeLoan));
+        when(loanRepository.search(CUSTOMER_ID, null, Set.of(LoanStatus.ACTIVE, LoanStatus.OVERDUE), null))
+                .thenReturn(new QueryResult<>(Set.of(activeLoan), 1));
 
         // Act & Assert
         assertDoesNotThrow(() -> validator.validate(CUSTOMER_ID));
